add SVGs, basic HTML and CSS, and empty module pattern to JS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>TicTacToe Project</title>
   </head>
   <body>
+    <header>
+      <div class="header-title-container">
+        <h1 class="title">Tic Tac Toe</h1>
+      </div>
+    </header>
+    <main>
+      <div class="gameboard-container">
+        <div class="gameboard"></div>
+      </div>
+    </main>
     <script src="./app.js"></script>
   </body>
 </html>
