--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <script src="./app.js" defer></script>
     <title>TicTacToe Project</title>
   </head>
   <body>
@@ -18,6 +19,5 @@
         <div class="gameboard"></div>
       </div>
     </main>
-    <script src="./app.js"></script>
   </body>
 </html>
