add main title to header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+
     <script src="./app.js" defer></script>
     <title>TicTacToe Project</title>
   </head>
@@ -12,6 +13,9 @@
     <header>
       <div class="header-title-container">
         <h1 class="title">Tic Tac Toe</h1>
+        <p class="main-title">
+          Autumn <span class="title-span">in</span> Middle Earth
+        </p>
       </div>
     </header>
     <main>
