adjusts header elements and adds footer/links

--- a/index.html
+++ b/index.html
@@ -11,17 +11,51 @@
   </head>
   <body>
     <header>
+      <div class="ttt-div">
+        <p class="tic">Tic</p>
+        <p class="tac">Tac</p>
+        <p class="toe">Toe</p>
+      </div>
+      <div class="base-background"></div>
       <div class="header-title-container">
-        <h1 class="title">Tic Tac Toe</h1>
-        <p class="main-title">
-          Autumn <span class="title-span">in</span> Middle Earth
-        </p>
+        <p class="main-title autumn">Autumn</p>
+        <p class="main-title in">in</p>
+        <p class="main-title middle">Middle Earth</p>
+      </div>
+      <div class="header-background">
+        <img src="./img/autumn 13.jpeg" alt="" /><img
+          src="./img/autumn 18.png"
+          alt=""
+        /><img src="./img/autumn 14.png" alt="" /><img
+          src="./img/autumn 20.png"
+          alt=""
+        /><img src="./img/autumn 16.png" alt="" /><img
+          src="./img/autumn 17.png"
+          alt=""
+        /><img src="./img/autumn 11.jpeg" alt="" />
       </div>
     </header>
-    <main>
+    <div class="main-fade-top"></div>
+    <main class="background-image-main">
       <div class="gameboard-container">
         <div class="gameboard"></div>
       </div>
+      <div class="main-fade-bottom"></div>
     </main>
+    <footer class="footer-backgrnd">
+      <div class="creator">
+        <p>Created by: Paul Laubach for the Odin Project</p>
+      </div>
+      <div class="credit-one">
+        <p>Tile images by:</p>
+        <a href="https://www.craiyon.com/">Craiyon Website (DALL-E mini)</a>
+      </div>
+      <div class="credit-two">
+        <p>Background image by:</p>
+        <a href="https://lotr.fandom.com/wiki/Maps?file=Middleearthmap.jpg"
+          >Djnox123</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
