add end game div and reset button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
     <!-- Start game modal & button -->
 
     <main class="background-image-main">
+      <div class="game-finished-modal hidden">
+        <p class="dynamic-ending">Frodo Wins!</p>
+        <button class="reset">EXIT</button>
+      </div>
       <div class="start-game-modal">
         <button class="play-button">PLAY</button>
       </div>
@@ -77,7 +81,7 @@
     </main>
     <footer class="footer-backgrnd">
       <div class="creator">
-        <p>Created by: Paul Laubach for the Odin Project</p>
+        <p>Created by: PFL3 for the Odin Project</p>
       </div>
       <div class="credit-one">
         <p>Tile images by:</p>
