add class of autumn to title paragraph element

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </div>
       <div class="base-background"></div>
       <div class="header-title-container">
-        <p class="main-title autumn">Autumn</p>
-        <p class="main-title in">in</p>
-        <p class="main-title middle">Middle Earth</p>
+        <p class="main-title main-title-style autumn">Autumn</p>
+        <p class="main-title main-title-style in">in</p>
+        <p class="main-title main-title-style middle">Middle Earth</p>
       </div>
       <div class="header-background">
         <img src="./img/autumn 13.jpeg" alt="" /><img
