Change header image tiles and title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,21 +24,21 @@
       </div>
       <div class="base-background"></div>
       <div class="header-title-container">
-        <p class="main-title main-title-style autumn">Autumn</p>
-        <p class="main-title main-title-style in">in</p>
-        <p class="main-title main-title-style middle">Middle Earth</p>
+        <p class="main-title main-title-style autumn">Seasons</p>
+        <p class="main-title main-title-style autumn in">of</p>
+        <p class="main-title main-title-style autumn">Middle Earth</p>
       </div>
       <div class="header-background">
-        <img src="./img/autumn 13.jpeg" alt="" /><img
+        <img src="./img/winter 6.png" alt="" /><img
           src="./img/autumn 18.png"
           alt=""
-        /><img src="./img/autumn 14.png" alt="" /><img
-          src="./img/autumn 20.png"
+        /><img src="./img/spring 15.png" alt="" /><img
+          src="./img/summer 16.png"
           alt=""
         /><img src="./img/autumn 16.png" alt="" /><img
-          src="./img/autumn 17.png"
+          src="./img/spring 13.png"
           alt=""
-        /><img src="./img/autumn 11.jpeg" alt="" />
+        /><img src="./img/winter 14.png" alt="" />
       </div>
     </header>
     <!-- Start game modal & button -->
